<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarOcr">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top"
        android:background="@drawable/back"
        tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:importantForAutofill="no"
            android:hint="@string/nombre"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etPaterno"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:importantForAutofill="no"
                android:hint="@string/paterno"
                android:inputType="textCapCharacters"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/etMaterno"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:importantForAutofill="no"
                android:hint="@string/materno"
                android:inputType="textCapCharacters"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>
        <EditText
            android:id="@+id/etDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/domicilio"
            android:layout_margin="5dp"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:importantForAutofill="no"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etColonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/colonia"
            android:layout_margin="5dp"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:importantForAutofill="no"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <EditText
            android:id="@+id/etSeccion"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="5dp"
            android:hint="@string/seccion"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <Spinner
            android:id="@+id/spCasilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spEscolaridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spOcupacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etCurp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_margin="5dp"
            android:hint="@string/curp"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="5dp"
            android:hint="@string/telefono"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_margin="5dp"
            android:hint="@string/correo"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEditText"
            android:layout_margin="5dp"
            android:hint="@string/facebook"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/etTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEditText"
            android:layout_margin="5dp"
            android:hint="@string/twitter"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etEmision"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:importantForAutofill="no"
                android:hint="@string/emision"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/etVigencia"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:importantForAutofill="no"
                android:hint="@string/vigencia"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonback"
            android:text="@string/guardar"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>