<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarOcr">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top"
        android:background="@drawable/back"
        tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etPaterno"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/etMaterno"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/paterno"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/materno"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:singleLine="true"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/nombre"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/domicilio"
            android:layout_margin="5dp"
            android:lines="1"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etEstado"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/etMunicipio"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/etLocalidad"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/estado"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/municipio"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/localidad"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <EditText
            android:id="@+id/etDomicilioActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:lines="2"
            android:textStyle="bold"
            android:hint="@string/domicilio_actual"/>
        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:hint="@string/telefono"/>
        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:hint="@string/correo"/>
        <EditText
            android:id="@+id/etClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center_horizontal"
            android:text="@string/clave_ine"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <EditText
                    android:id="@+id/etSeccion"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/seccion"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/btnActualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/buttonback"
                    android:text="@string/actualizar"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivCredencial"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/perfil" />
            </LinearLayout>
        <Button
            android:id="@+id/btnRegistro"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="140dp"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="registro"
            android:text="Registro"/>
        </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>