<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuscarOcr">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/top"
        android:background="@drawable/back"
        tools:context="com.google.android.gms.samples.vision.ocrreader.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_focus"
                android:id="@+id/auto_focus"
                android:layout_margin="10dp"
                android:checked="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_flash"
                android:id="@+id/use_flash"
                android:checked="false"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/read_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/buttonback"
                android:text="@string/read_text" />
        </LinearLayout>
        <EditText
            android:id="@+id/etClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:importantForAutofill="no"
            android:hint="@string/clave_ine"
            android:text="ACAGAD89081530H300"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/buttonback"
            android:text="@string/buscar"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>